Refactoring of gamelogic and gameobjects. Minor text change in RulesScreen